--- a/.github/workflows/delivery-workflow.yml
+++ b/.github/workflows/delivery-workflow.yml
@@ -6,12 +6,8 @@ name: Docker
 # documentation.
 
 on:
-  push:
-    branches: [ "main" ]
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "main" ]
+ workflow_call:
+ workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -21,13 +17,7 @@ env:
 
 
 jobs:
-  integration:
-    uses: ./.github/workflows/python-ci-workflow.yml
-    permissions:
-      contents: read
-      checks: write
   build:
-    needs: [integration]
     runs-on: ubuntu-latest
     permissions:
       contents: read
