--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
 
   deploy-staging:
     needs: [delivery]
-    uses: ./.
+    uses: 
     with:
       environment: Staging
     permissions:
@@ -45,7 +45,7 @@ jobs:
 
   deploy-production:
     needs: [deploy-staging]
-    uses: ./.
+    uses: 
     with:
       environment: Production
     permissions:
