--- a/.github/workflows/deploy-on-gcp.yml
+++ b/.github/workflows/deploy-on-gcp.yml
@@ -50,7 +50,7 @@ jobs:
         id: build-docker-image
         run: |
           ls -la 
-          docker build . -f Dockerfile -t maric77/demo-image-test:latest
+          docker build . -f Dockerfile -t maric77/demo-test-image:latest
       - name: push the docker image
         id: push-docker-image
-        run: docker push ${{secrets.DOCKERHUB_USERNAME}}/demo-image-test:latest
+        run: docker push ${{secrets.DOCKERHUB_USERNAME}}/demo-test-image:latest
