--- a/.github/workflows/deploy-on-gcp.yml
+++ b/.github/workflows/deploy-on-gcp.yml
@@ -21,7 +21,7 @@ jobs:
       - id: 'auth'
         uses: 'google-github-actions/auth@v1'
         with:
-         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+         credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT }}'
          
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
